--- a/pages/tables/data.html
+++ b/pages/tables/data.html
@@ -707,7 +707,7 @@
             </div>
             <!-- /.card-header -->
             <div class="card-body">
-              <table id="ex-table" id="example1" class="table table-bordered table-striped">
+              <table id="ex-table" class="table table-bordered table-striped">
                 <thead>
                 <tr>
                   <th>Address</th>
@@ -762,7 +762,7 @@
 <!-- page script -->
 <script>
   $(function () {
-    $("#example1").DataTable();
+    $("#ex-table").DataTable();
     $('#example2').DataTable({
       "paging": true,
       "lengthChange": false,
