--- a/pages/tables/data.html
+++ b/pages/tables/data.html
@@ -709,16 +709,27 @@
             <div class="card-body">
               <table id="ex-table" class="table table-bordered table-striped">
                 <thead>
-                <tr>
-                  <th>Address</th>
-                  <th>Batch</th>
-                  <th>Born Date</th>
-                  <th>Born Place</th>
-                  <th>Carrier Path</th>
-                  <th>Character</th>
-                  <th>Color Relation</th>
-                </tr>
+                  <tr>
+                    <th>Address</th>
+                    <th>Batch</th>
+                    <th>Born Date</th>
+                    <th>Born Place</th>
+                    <th>Carrier Path</th>
+                    <th>Character</th>
+                    <th>Color Relation</th>
+                  </tr>
                 </thead>
+                <tbody>
+                  <tr>
+                    <td>asd</td>
+                    <td>asd</td>
+                    <td>asd</td>
+                    <td>asd</td>
+                    <td>asd</td>
+                    <td>asd</td>
+                    <td>asd</td>
+                  </tr>
+                  </tbody>
               </table>
             </div>
             <!-- /.card-body -->
