--- a/pages/tables/data.html
+++ b/pages/tables/data.html
@@ -710,15 +710,17 @@
               <table id="ex-table" class="table table-bordered table-striped">
                 <thead>
                 <tr>
-                  <th>Address</th>
+                  <th>Nickname</th>
+                  <th>Title</th>
+                  <th>Organization</th>
                   <th>Batch</th>
-                  <th>Born Date</th>
-                  <th>Born Place</th>
                   <th>Carrier Path</th>
+                  <th>Colour</th>
                   <th>Character</th>
-                  <th>Color Relation</th>
                 </tr>
                 </thead>
+                <tbody id="tbody">
+                </tbody>
               </table>
             </div>
             <!-- /.card-body -->
@@ -763,16 +765,9 @@
 <script>
   $(function () {
     $("#ex-table").DataTable();
-    $('#example2').DataTable({
-      "paging": true,
-      "lengthChange": false,
-      "searching": false,
-      "ordering": true,
-      "info": true,
-      "autoWidth": false,
-    });
   });
 </script>
+
 <!-- Firebase initial-->
 <script src="https://www.gstatic.com/firebasejs/7.2.2/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.2.2/firebase-analytics.js"></script>
@@ -802,21 +797,19 @@
     if(snapshot.exists()){
       $('#ex-table tbody').empty();
       var content = '';
-      content +='<tbody>';
       snapshot.forEach(function(childSnapshot) {
         var childVal = childSnapshot.val();
-        content +='<tr>';
-        content += '<td>' + childVal.address + '</td>';
+        content +='<tr role="row">';
+        content += '<td>' + childVal.firstName + ' ' + childVal.lastName + '</td>';
+        content += '<td>' + childVal.title_organization + '</td>';
+        content += '<td>' + childVal.organization + '</td>';
         content += '<td>' + childVal.batch + '</td>';
-        content += '<td>' + childVal.bornDate + '</td>';
-        content += '<td>' + childVal.bornPlace + '</td>';
         content += '<td>' + childVal.carrierPath + '</td>';
-        content += '<td>' + childVal.character + '</td>';
         content += '<td>' + childVal.colourRelation + '</td>';
+        content += '<td>' + childVal.character + '</td>';
         content += '</tr>';
       });
-      content +='</tbody>';
-      $('#ex-table').append(content);
+      $('#tbody').append(content);
     }
   });
 </script>
