--- a/pages/tables/data.html
+++ b/pages/tables/data.html
@@ -719,7 +719,7 @@
                     <th>Color Relation</th>
                   </tr>
                 </thead>
-                <tbody>
+                <tbody id="tbody">
                   <tr>
                     <td>asd</td>
                     <td>asd</td>
